--- a/blocks/mega-nav/mega-nav.css
+++ b/blocks/mega-nav/mega-nav.css
@@ -18,7 +18,6 @@
 
 .mega-nav-item {
   margin: 0;
-  position: relative;
 }
 
 .mega-nav-trigger,
